katars/tests/snaps/snapshots/snap_errors__type_mismatch_binop.snap
---
source: katars/tests/snaps/errors.rs
expression: "helpers::run_error(\"let x = 1 + \\\"a\\\"\")"
---
Error: cannot apply '+' to Int and Str
   ╭─[<test>:1:9]
   │
 1 │ let x = 1 + "a"
   │         ┬──┬─┬─  
   │         ╰──────── Int
   │            │ │   
   │            ╰───── cannot apply '+' to Int and Str
   │              │   
   │              ╰─── Str
───╯
